--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Foodmap</title>
+    <title>Lyft</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,
 maximum-scale=1">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1></h1>
-    
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <h1>Lyft</h1>
+
+    <!-- Jquery -->
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+    <!-- Javascript -->
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
