subiendo vista splash

--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Lyft</title>
+    <title>Foodmap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,
 maximum-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
-    <h1>Lyft</h1>
+  <body class="gradient container-flex-column vh100">
+    <div class="container-fluid">
+      <div class="row">
+        <img src="assets/images/logo-white.png" alt="logo-white" class="col-xs-offset-2 col-xs-8">
+      </div>
+
+    </div>
+
+
+
 
     <!-- Jquery -->
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
